--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -378,10 +378,10 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        [46] Καὶ μὴν καὶ τύποι ὁμοιοσχήμονες τοῖς στερεμνίοις εἰσί, λεπτότησιν ἀπέχοντες μακρὰν τῶν φαινομένων.
+        [46a] Καὶ μὴν καὶ τύποι ὁμοιοσχήμονες τοῖς στερεμνίοις εἰσί, λεπτότησιν ἀπέχοντες μακρὰν τῶν φαινομένων.
     </td>
     <td>
-        [46] Moreover, there are images like in shape to the solid bodies, far surpassing perceptible things in their subtlety of texture.
+        [46a] Moreover, there are images like in shape to the solid bodies, far surpassing perceptible things in their subtlety of texture.
     </td>
 </tr>
 <tr>
@@ -402,10 +402,10 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        [47] Εἶθ᾽ ὅτι τὰ εἴδωλα ταῖς λεπτότησιν ἀνυπερβλήτοις κέχρηται, οὐθὲν ἀντιμαρτυρεῖ τῶν φαινομένων·
+        [47a] Εἶθ᾽ ὅτι τὰ εἴδωλα ταῖς λεπτότησιν ἀνυπερβλήτοις κέχρηται, οὐθὲν ἀντιμαρτυρεῖ τῶν φαινομένων·
     </td>
     <td>
-        [47] Next, nothing among perceptible things contradicts the belief that the images have unsurpassable fineness of texture.
+        [47a] Next, nothing among perceptible things contradicts the belief that the images have unsurpassable fineness of texture.
     </td>
 </tr>
 <tr>
@@ -834,10 +834,330 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        [61]
+        [61] Καὶ μὴν καὶ ἰσοταχεῖς ἀναγκαῖον τὰς ἀτόμους εἶναι, ὅταν διὰ τοῦ κενοῦ εἰσφέρωνται μηθενὸς ἀντικόπτοντος.
     </td>
     <td>
-        [61]
+        [61] Moreover, the atoms must move with equal speed, when they are borne onwards through the void, nothing colliding with them.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὔτε γὰρ τὰ βαρέα θᾶττον οἰσθήσεται τῶν μικρῶν καὶ κούφων, ὅταν γε δὴ μηδὲν ἀπαντᾷ αὐτοῖς·
+    </td>
+    <td>
+        For neither will the heavy move more quickly than the small and light, when, that is, nothing meets them:
+    </td>
+</tr>
+<tr>
+    <td>
+        οὔτε τὰ μικρὰ τῶν μεγάλων, πάντα πόρον σύμμετρον ἔχοντα, ὅταν μηθὲν μηδὲ ἐκείνοις ἀντικόπτῃ·
+    </td>
+    <td>
+        nor again the small more quickly than the great, having their whole course uniform, when nothing collides with them either:
+    </td>
+</tr>
+<tr>
+    <td>
+        οὔθ᾽ ἡ ἄνω οὔθ᾽ ἡ εἰς τὸ πλάγιον διὰ τῶν κρούσεων φορά, οὔθ᾽ ἡ κάτω διὰ τῶν ἰδίων βαρῶν.
+    </td>
+    <td>
+        nor is the motion upwards or sideways owing to blows (quicker), nor again that downwards owing to their own weight.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἐφ᾽ ὁπόσον γὰρ ἂν κατίσχῃ ἑκατέρ&lt;α αὐτ&gt;ῶν, ἐπὶ τοσοῦτον ἅμα νοήματι τὴν φορὰν σχήσει, ἕως &lt;ἄν τι&gt; ἀντικόψῃ, ἢ ἔξωθεν ἢ ἐκ τοῦ ἰδίου βάρους πρὸς τὴν τοῦ πλήξαντος δύναμιν.
+    </td>
+    <td>
+        For as long as either of the two motions prevails, so long will it have a course as quick as thought, until something checks it either from outside or from its own weight counteracting the force of that which dealt the blow. 
+    </td>
+</tr>
+<tr>
+    <td>
+        [46b] καὶ μὴν καὶ ἡ διὰ τοῦ κενοῦ φορὰ κατὰ μηδεμίαν ἀπάντησιν τῶν ἀντικοψόντων γινομένη πᾶν μῆκος περιληπτὸν ἐν ἀπερινοήτῳ χρόνῳ συντελεῖ.
+    </td>
+    <td>
+        [46b] Moreover, their passage through the void, when it takes place without meeting any bodies which might collide, accomplishes every comprehensible distance in an inconceivably short time.
+    </td>
+</tr>
+<tr>
+    <td>
+        βράδους γὰρ καὶ τάχους ἀντικοπὴ καὶ οὐκ ἀντικοπὴ ὁμοίωμα λαμβάνει.
+    </td>
+    <td>
+        For it is collision and its absence which take the outward appearance of slowness and quickness.
+    </td>
+</tr>
+<tr>
+    <td>
+        [62] ἀλλὰ μὴν καὶ κατὰ τὰς συγκρίσεις θάττων ἑτέρα ἑτέρας ῥηθήσεται τῶν ἀτόμων ἰσοταχῶν οὐσῶν, τῷ ἐφ᾽ ἕνα τόπον φέρεσθαι τὰς ἐν τοῖς ἀθροίσμασιν ἀτόμους καὶ κατὰ τὸν ἐλάχιστον συνεχῆ χρόνον, εἰ μὴ ἐφ᾽ ἕνα κατὰ τοὺς λόγῳ θεωρητοὺς χρόνους, ἀλλὰ πυκνὸν ἀντικόπτουσιν, ἕως ἂν ὑπὸ τὴν αἴσθησιν τὸ συνεχὲς τῆς φορᾶς γίνηται.
+    </td>
+    <td>
+        [62] Moreover, it will be said that in compound bodies too one atom is faster than another, though as a matter of fact all are equal in speed this will be said because even in the least period of continuous time all the atoms in aggregate bodies move towards one place, even though in moments of time perceptible only by thought they do not move towards one place but are constantly jostling one against another, until the continuity of their movement comes under the ken of sensation.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ γὰρ προσδοξαζόμενον περὶ τοῦ ἀοράτου, ὡς ἄρα καὶ οἱ διὰ λόγου θεωρητοὶ χρόνοι τὸ συνεχὲς τῆς φορᾶς ἕξουσιν, οὐκ ἀληθές ἐστιν ἐπὶ τῶν τοιούτων·
+    </td>
+    <td>
+        For the addition of opinion with regard to the unseen, that the moments perceptible only by thought will also contain continuity of motion, is not true in such cases;
+    </td>
+</tr>
+<tr>
+    <td>
+        ἐπεὶ τό γε θεωρούμενον πᾶν ἢ κατ᾽ ἐπιβολὴν λαμβανόμενον τῇ διανοίᾳ ἀληθές ἐστιν.
+    </td>
+    <td>
+        for we must remember that it is what we observe with the senses or grasp with the mind by an apprehension that is true.
+    </td>
+</tr>
+<tr>
+    <td>
+        [47b] οὐ μὴν οὐδ᾽ ἅμα κατὰ τοὺς διὰ λόγου θεωρητοὺς χρόνους καὶ τὸ φερόμενον σῶμα ἐπὶ τοὺς πλείους τόπους ἀφικνεῖται (ἀδιανόητον γὰρ, καὶ τοῦτο συναφικνούμενον ἐν αἰσθητῷ χρόνῳ ὅθεν δήποθεν τοῦ ἀπείρου οὐκ ἐξ οὗ ἂν περιλάβωμεν τὴν φορὰν τόπου ἔσται ἀφιστάμενον)·
+    </td>
+    <td>
+        [47b] Nor must it either be supposed that in moments perceptible only by thought the moving body too passes to the several places to which its component atoms move (for this too is unthinkable, and in that case, when it arrives all together in a sensible period of time from any point that may be in the infinite void, it would not be taking its departure from the place from which we apprehend its motion);
+    </td>
+</tr>
+<tr>
+    <td>
+        ἀντικοπῇ γὰρ ὅμοιον ἔσται, κἂν μέχρι τοσούτου τὸ τάχος τῆς φορᾶς μὴ ἀντικόπτον καταλίπωμεν.
+    </td>
+    <td>
+        for the motion of the whole body will be the outward expression of its internal collisions, even though up to the limits of perception we suppose the speed of its motion not to be retarded by collision.
+    </td>
+</tr>
+<tr>
+    <td>
+        χρήσιμον δὴ καὶ τοῦτο κατασχεῖν τὸ στοιχεῖον.
+    </td>
+    <td>
+        It is of advantage to grasp this first principle as well.
+    </td>
+</tr>
+<tr>
+    <td>
+        [63] Μετὰ δὲ ταῦτα δεῖ συνορᾶν ἀναφέροντα ἐπὶ τὰς αἰσθήσεις καὶ τὰ πάθη (οὕτω γὰρ ἡ βεβαιοτάτη πίστις ἔσται), ὅτι ἡ ψυχὴ σῶμά ἐστι λεπτομερὲς παρ᾽ ὅλον τὸ ἄθροισμα παρεσπαρμένον, προσεμφερέστατον δὲ πνεύματι θερμοῦ τίνα κρᾶσιν ἔχοντι καὶ πῇ μὲν τούτῳ προσεμφερές, πῇ δὲ τούτῳ. 
+    </td>
+    <td> 
+        [63] Next, referring always to the sensations and the feelings &lt;for in this way you will obtain the most trustworthy ground of belief&gt;, you must consider that the soul is a body of fine particles distributed throughout the whole structure, and most resembling wind with a certain admixture of heat, and in some respects like to one of these and in some to the other.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἔστι δὲ τὸ μέρος πολλὴν παραλλαγὴν εἰληφὸς τῇ λεπτομερείᾳ καὶ αὐτῶν τούτων, συμπαθὲς δὲ τούτῳ μᾶλλον καὶ τῷ λοιπῷ ἀθροίσματι·
+    </td>
+    <td> 
+        There is also the part which is many degrees more advanced even than these in fineness of composition, and for this reason is more capable of feeling in harmony with the rest of the structure as well.
+    </td>
+</tr>
+<tr>
+    <td>
+        τοῦτο δὲ πᾶν αἱ δυνάμεις τῆς ψυχῆς δῆλον &lt;ποιοῦσι&gt; καὶ τὰ πάθη καὶ αἱ εὐκινησίαι καὶ αἱ διανοήσεις καὶ ὧν στερόμενοι θνῄσκομεν.
+    </td>
+    <td> 
+        Now all this is made manifest by the activities of the soul and the feelings and the readiness of its movements and its processes of thought and by what we lose at the moment of death.
+    </td>
+</tr>
+<tr>
+    <td>
+        Καὶ μὴν καὶ ὅτι ἔχει ἡ ψυχὴ τῆς αἰσθήσεως τὴν πλείστην αἰτίαν, δεῖ κατέχειν·
+    </td>
+    <td> 
+        Further, you must grasp that the soul possesses the chief cause of sensation:
+    </td>
+</tr>
+<tr>
+    <td>
+        [64] οὐ μὴν εἰλήφει ἂν ταύτην, εἰ μὴ ὑπὸ τοῦ λοιποῦ ἀθροίσματος ἐστεγάζετό πως.
+    </td>
+    <td> 
+        [64] yet it could not have acquired sensation, unless it were in some way enclosed by the rest of the structure.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ δὲ λοιπὸν ἄθροισμα παρασκευάσαν ἐκείνῃ τὴν αἰτίαν ταύτην μετείληφε καὶ αὐτὸ τοιούτου συμπτώματος παρ᾽ ἐκείνης,
+    </td>
+    <td> 
+        And this in its turn having afforded the soul this cause of sensation acquires itself too a share in this contingent capacity from the soul.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐ μέντοι πάντων ὧν ἐκείνη κέκτηται·
+    </td>
+    <td> 
+        Yet it does not acquire all the capacities which the soul possesses:
+    </td>
+</tr>
+<tr>
+    <td>
+        διὸ ἀπαλλαγείσης τῆς ψυχῆς οὐκ ἔχει τὴν αἴσθησιν.
+    </td>
+    <td> 
+        and therefore when the soul is released from the body, the body no longer has sensation.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐ γὰρ αὐτὸ ἐν ἑαυτῷ ταύτην ἐκέκτητο τὴν δύναμιν, ἀλλ᾽ ἑτέρῳ ἅμα συγγεγενημένῳ αὐτῷ παρεσκεύαζεν, ὃ διὰ τῆς συντελεσθείσης περὶ αὐτὸ δυνάμεως κατὰ τὴν κίνησιν σύμπτωμα αἰσθητικὸν εὐθὺς ἀποτελοῦν ἑαυτῷ ἀπεδίδου κατὰ τὴν ὁμούρησιν καὶ συμπάθειαν καὶ ἐκείνῳ, καθάπερ εἶπον.
+    </td>
+    <td> 
+        For it never possessed this power in itself, but used to afford opportunity for it to another existence, brought into being at the same time with itself: and this existence, owing to the power now consummated within itself as a result of motion, used spontaneously to produce for itself the capacity of sensation and then to communicate it to the body as well, in virtue of its contact and correspondence of movement, as I have already said.
+    </td>
+</tr>
+<tr>
+    <td>
+        [65] διὸ δὴ καὶ ἐνυπάρχουσα ἡ ψυχὴ οὐδέποτε ἄλλου τινὸς μέρους ἀπηλλαγμένου ἀναισθητήσει·
+    </td>
+    <td> 
+        [65] Therefore, so long as the soul remains in the body, even though some other part of the body be lost, it will never lose sensation;
+    </td>
+</tr>
+<tr>
+    <td>
+        ἀλλ᾽ ἃ ἂν καὶ ταύτης ξυνἀπόληται τοῦ στεγάζοντος λυθέντος εἴθ᾽ ὅλου εἴτε καὶ μέρους τινός, ἐάν περ διαμένῃ, ἕξει τὴν αἴσθησιν·
+    </td>
+    <td> 
+        nay more, whatever portions of the soul may perish too, when that which enclosed it is removed either in whole or in part, if the soul continues to exist at all, it will retain sensation.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ δὲ λοιπὸν ἄθροισμα διαμένον καὶ ὅλον καὶ κατὰ μέρος οὐκ ἔχει τὴν αἴσθησιν ἐκείνου ἀπηλλαγμένου, ὅσον ποτὲ ἐστὶ τὸ συντεῖνον τῶν ἀτόμων πλῆθος εἰς τὴν τῆς ψυχῆς φύσιν.
+    </td>
+    <td> 
+        On the other hand the rest of the structure, though it continues to exist either as a whole or in part, does not retain sensation, if it has once lost that sum of atoms, however small it be, which together goes to produce the nature of the soul.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ μὴν καὶ διαλυομένου τοῦ ὅλου ἀθροίσματος ἣ ψυχὴ διασπείρεται καὶ οὐκέτι ἔχει τὰς αὐτὰς δυνάμεις οὐδὲ κινεῖται, ὥστε οὐδ᾽ αἴσθησιν κέκτηται.
+    </td>
+    <td> 
+        Moreover, if the whole structure is dissolved, the soul is dispersed and no longer has the same powers nor performs its movements, so that it does not possess sensation either.
+    </td>
+</tr>
+<tr>
+    <td>
+        [66] οὐ γὰρ οἷόν τε νοεῖν αὐτὸ αἰσθανόμενον μὴ &gt;ὂν&lt; ἐν τούτῳ τῷ συστήματι καὶ ταῖς κινήσεσι ταύταις χρώμενον, ὅταν τὰ στεγάζοντα καὶ περιέχοντα μὴ τοιαῦτα ᾖ, ἐν οἷς νῦν οὖσα ἔχει ταύτας τὰς κινήσεις.
+    </td>
+    <td>
+        [66] For it is impossible to imagine it with sensation, if it is not in this organism and cannot effect these movements, when what encloses and surrounds it is no longer the same as the surroundings in which it now exists and performs these movements.
+    </td>
+</tr>
+<tr>
+    <td>
+        [67] ἀλλὰ μὴν καὶ τόδε γε δεῖ προσκατανοεῖν ὅτι τὸ ἀσώματον λέγεται κατά τήν πλείστην ὁμιλίαν τοῦ ὀνόματος ἐπὶ τοῦ καθ᾽ ἑαυτὸ νοηθέντος ἄν.
+    </td>
+    <td>
+        [67] Furthermore, we must clearly comprehend as well, that the incorporeal in the general acceptation of the term is applied to that which could be for if it were thought of as such as an independent existence.
+    </td>
+</tr>
+<tr>
+    <td>
+        καθ᾽ ἑαυτὸ δὲ οὐκ ἔστι νοῆσαι τὸ ἀσώματον πλὴν τοῦ κενοῦ· 
+    </td>
+    <td>
+        Now it is impossible to conceive the incorporeal as a separate existence, except the void:
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ δὲ κενὸν οὔτε ποιῆσαι οὔτε παθεῖν δύναται, ἀλλὰ κίνησιν μόνον δι᾽ ἑαυτοῦ τοῖς σώμασι παρέχεται.
+    </td>
+    <td>
+        and the void can neither act nor be acted upon, but only provides opportunity of motion through itself to bodies.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὥσθ᾽ οἱ λέγοντες ἀσώματον εἶναι τὴν ψυχὴν ματᾴζουσιν.
+    </td>
+    <td>
+        So that those who say that the soul is incorporeal are talking idly.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐθὲν γὰρ ἂν ἐδύνατο ποιεῖν οὔτε πάσχειν, εἰ ἦν τοιαύτη·
+    </td>
+    <td>
+        For it would not be able to act or be acted on in any respect, if it were of this nature.
+    </td>
+</tr>
+<tr>
+    <td>
+        νῦν δ᾽ ἐναργῶς ἀμφότερα ταῦτα διαλαμβάνεται περὶ τὴν ψυχὴν τὰ συμπτώματα.
+    </td>
+    <td>
+        But as it is, both these occurrences are clearly distinguished in respect of the soul.
+    </td>
+</tr>
+<tr>
+    <td>
+        [68] ταῦτα οὖν πάντα τα διαλογίσματα &lt;τὰ&gt; περὶ ψυχῆς ἀνάγων τις ἐπὶ τὰ πάθη καὶ τὰς αἰσθήσεις, μνημονεύων τῶν ἐν ἀρχῇ ῥηθέντων, ἱκανῶς κατόψεται τοῖς τύποις ἐμπεριειλημμένα εἰς τὸ &lt;καὶ τὰ&gt; κατὰ μέρος ἀπὸ τούτων ἐξακριβοῦσθαι βεβαίως.
+    </td>
+    <td>
+        [68] Now if one refers all these reasonings about the soul to the standards of feeling and sensation and remembers what was said at the outset, he will see that they are sufficiently embraced in these general formulae to enable him to work out with certainty on this basis the details of the system as well.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἀλλὰ μὴν καὶ τὰ σχήματα καὶ τὰ χρώματα καὶ τὰ μεγέθη καὶ τὰ βάρη καὶ ὅσα ἄλλα κατηγορεῖται σώματος ὡσανεὶ συμβεβηκότα ἢ πᾶσιν ἢ τοῖς ὁρατοῖς καὶ κατὰ τὴν αἴσθησιν αὐτῶν γνωστοῖς, οὔθ᾽ ὡς καθ᾽ ἑαυτάς εἰσι φύσεις δοξαστέον (οὐ γὰρ δυνατὸν ἐπινοῆσαι τοῦτο),
+    </td>
+    <td>
+        Moreover, as regards shape and colour and size and weight and all other things that are predicated of body, as though they were concomitant properties either of all things or of things visible or recognizable through the sensation of these qualities, we must not suppose that they are either independent existences (for it is impossible to imagine that),
+    </td>
+</tr>
+<tr>
+    <td>
+        [69] οὔτε ὅλως ὡς οὐκ εἰσίν, οὔθ᾽ ὡς ἕτερ᾽ ἄττα προσυπάρχοντα τούτῳ ἀσώματα, οὔθ᾽ ὡς μόρια τούτου, ἀλλ᾽ ὡς τὸ ὅλον σῶμα καθόλου μὲν &lt;ἐκ&gt; τούτων πάντων τὴν ἑαυτοῦ φύσιν ἔχον ἀίδιον, οὐχ οἷον δ᾽ εἶναι &lt;ἐκ&gt; συμπεφορημένων (ὥσπερ ὅταν ἐξ αὐτῶν τῶν ὄγκων μεῖζον ἄθροισμα συστῇ ἤτοι τῶν πρώτων ἢ τῶν τοῦ ὅλου μεγεθῶν τοῦδε τινὸς ἐλαττόνων), ἀλλὰ μόνον, ὡς λέγω, ἐκ τούτων ἁπάντων τὴν ἑαυτοῦ φύσιν ἔχον ἀίδιον.
+    </td>
+    <td>
+        [69] nor that they absolutely do not exist, nor that they are some other kind of incorporeal existence accompanying body, nor that they are material parts of body: rather we should suppose that the whole body in its totality owes its own permanent existence to all these, yet not in the sense that it is composed of properties brought together to form it (as when, for instance, a larger structure is put together out of the parts which compose it, whether the first units of size or other parts smaller than itself, whatever it is), but only, as I say, that it owes its own permanent existence to all of them.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ ἐπιβολὰς μὲν ἔχοντα ἰδίας πάντα ταῦτά ἐστι καὶ διαλήψεις, συμπαρακολουθοῦντος δὲ τοῦ ἀθρόου καὶ οὐθαμῇ ἀποσχιζόμενα, ἀλλὰ κατὰ τὴν ἀθρόαν ἔννοιαν τοῦ σώματος κατηγορίαν εἰληφότος.
+    </td>
+    <td>
+        All these properties have their own peculiar means of being perceived and distinguished, provided always that the aggregate body goes along with them and is never wrested from them, but in virtue of its comprehension as an aggregate of qualities acquires the predicate of body.
+    </td>
+</tr>
+<tr>
+    <td>
+        [70] Καὶ μὴν καὶ τοῖς σώμασι συμπίπτει πολλάκις καὶ οὐκ ἀίδιον παρακολουθεῖν ***** οὔτ᾽ ἐν τοῖς ἀοράτοις εἶναι οὔτε ἀσώματα.
+    </td>
+    <td>
+        [70] Furthermore, there often happen to bodies and yet do not permanently accompany them &lt;accidents, of which we must suppose neither that they do not exist at all nor that they have the nature of a whole body&gt;, nor that they can be classed among unseen things nor as incorporeal.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὥστε δὴ κατὰ τὴν πλείστην φορὰν τούτῳ τῷ ὀνόματι χρώμενοι φανερὰ ποιοῦμεν τὰ συμπτώματα οὔτε τὴν τοῦ ὅλου φύσιν ἔχειν, ὃ συλλαβόντες κατὰ τὸ ἀθρόον σῶμα προςαγορεύομεν, οὔτε τὴν τῶν ἀίδιον παρακολουθούντων, ὧν ἄνευ σῶμα οὐ δυνατὸν νοεῖσθαι.
+    </td>
+    <td>
+        So that when according to the most general usage we employ this name, we make it clear that accidents have neither the nature of the whole, which we comprehend in its aggregate and call body, nor that of the qualities which permanently accompany it, without which a given body cannot be conceived.
+    </td>
+</tr>
+<tr>
+    <td>
+        κατ᾽ ἐπιβολὰς δ᾽ ἄν τινας παρακολουθοῦντος τοῦ ἀθρόου ἕκαστα προσαγορευθείη,
+    </td>
+    <td>
+        But as the result of certain acts of apprehension, provided the aggregate body goes along with them, they might each be given this name,
+    </td>
+</tr>
+<tr>
+    <td>
+        [71] ἀλλ᾽ ὅτε δήποτε ἕκαστα συμβαίνοντα θεωρεῖται, οὐκ ἀίδιον τῶν συμπτωμάτων παρακολουθούντων.
+    </td>
+    <td>
+        [71] but only on occasions when each one of them is seen to occur, since accidents are not permanent accompaniments.
     </td>
 </tr>
 </table>
