--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -1160,6 +1160,54 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
         [71] but only on occasions when each one of them is seen to occur, since accidents are not permanent accompaniments.
     </td>
 </tr>
+<tr>
+    <td>
+        καὶ οὐκ ἐξελατέον ἐκ τοῦ ὄντος ταύτην τὴν ἐνάργειαν, ὅτι οὐκ ἔχει τὴν τοῦ ὅλου φύσιν ᾧ συμβαίνει οὐδὲ τὴν τῶν ἀίδιον παρακολουθούντων, οὐδ᾽ αὖ καθ᾽ αὑτὰ νομιστέον (οὐδὲ γὰρ τοῦτο διανοητέον οὔτ᾽ ἐπὶ τούτων οὔτ᾽ ἐπὶ τῶν ἀίδιον συμβεβηκότων), ἀλλ᾽ ὅπερ καὶ φαίνεται, συμπτώματα πάν&lt;τα κα&gt;τὰ τὰ σώματα νομιστέον, καὶ οὐκ ἀίδιον παρακολουθοῦντα οὐδ᾽ αὖ φύσεως καθ᾽ ἑαυτὰ τάγμα ἔχοντα, ἀλλ᾽ ὃν τρόπον αὐτὴ ἡ αἴσθησις τὴν ἰδιότητα ποιεῖ, θεωρεῖται.
+    </td>
+    <td> 
+        And we must not banish this clear vision from the realm of existence, because it does not possess the nature of the whole to which it is joined nor that of the permanent accompaniments, nor must we suppose that such contingencies exist independently (for this is inconceivable both with regard to them and to the permanent properties), but, just as it appears in sensation, we must think of them all as accidents occurring to bodies, and that not as permanent accompaniments, or again as having in themselves a place in the ranks of material existence; rather they are seen to be just what our actual sensation shows their proper character to be.
+    </td>
+</tr>
+<tr>
+    <td>
+        [72] Καὶ μὴν καὶ τόδε γε δεῖ προσκατανοῆσαι σφοδρῶς·
+    </td>
+    <td> 
+        [72] Moreover, you must firmly grasp this point as well;
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸν γὰρ δὴ χρόνον οὐ ζητητέον ὥσπερ καὶ τὰ λοιπά, ὅσα ἐν ὑποκειμένῳ ζητοῦμεν ἀνάγοντες ἐπὶ τὰς βλεπομένας παρ᾽ ἡμῖν αὐτοῖς προλήψεις, ἀλλ᾽ αὐτὸ τὸ ἐνάργημα, καθ᾽ ὃ τὸν πολὺν ἢ ὀλίγον χρόνον ἀναφωνοῦμεν, συγγενικῶς τοῦτο ἐπιφέροντες, ἀναλογιστέον.
+    </td>
+    <td> 
+        we must not look for time, as we do for all other things which we look for in an object, by referring them to the general conceptions which we perceive in our own minds, but we must take the direct intuition, in accordance with which we speak of 'a long time' or 'a short time', and examine it, applying our intuition to time as we do to other things.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ οὔτε διαλέκτους ὡς βελτίους μεταληπτέον, ἀλλ᾽ αὐταῖς ταῖς ὑπαρχούσαις κατ᾽ αὐτοῦ χρηστέον·
+    </td>
+    <td> 
+        Neither must we search for expressions as likely to be better, but employ just those which are in common use about it.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὔτε ἄλλό τι κατ᾽ αὐτοῦ κατηγορητέον ὡς τὴν αὐτὴν οὐσίαν ἔχον τῷ ἰδιώματι τούτῳ (καὶ γὰρ τοῦτο ποιοῦσι τινές), ἀλλὰ μόνον ὦ συμπλέκομεν τὸ ἴδιον τοῦτο καὶ παραμετροῦμεν, μάλιστα ἐπιλογιστέον. 
+    </td>
+    <td> 
+        Nor again must we predicate of time anything else as having the same essential nature as this special perception, as some people do, but we must turn our thoughts particularly to that only with which we associate this peculiar perception and by which we measure it.
+    </td>
+</tr>
+<tr>
+    <td>
+        [73]
+    </td>
+    <td> 
+        [73]
+    </td>
+</tr>
 </table>
 </body>
 </html>
