--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -1202,10 +1202,122 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        [73]
+        [73] καὶ γὰρ τοῦτο οὐκ ἀποδείξεως προσδεῖται ἀλλ᾽ ἐπιλογισμοῦ, ὅτι ταῖς ἡμέραις καὶ ταῖς νυξὶ συμπλέκομεν καὶ τοῖς τούτων μέρεσιν, ὡσαύτως δὲ καὶ τοῖς πάθεσι καὶ ταῖς ἀπαθείαις, καὶ κινήσεσι καὶ στάσεσιν, ἴδιόν τι σύμπτωμα περὶ ταῦτα πάλιν αὐτὸ τοῦτο ἐννοοῦντες, καθ᾽ ὃ χρόνον ὀνομάζομεν.
     </td>
     <td> 
-        [73]
+        [73] For indeed this requires no demonstration, but only reflection, to show that it is with days and nights and their divisions that we associate it, and likewise also with internal feelings or absence of feeling, and with movements and states of rest; in connexion with these last again we think of this very perception as a peculiar kind of accident, and in virtue of this we call it time.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἐπί τε τοῖς προειρημένοις τοὺς κόσμους δεῖ καὶ πᾶσαν σύγκρισιν πεπερασμένην τὸ ὁμοιοειδὲς τοῖς θεωρουμένοις πυκνῶς ἔχουσαν νομίζειν γεγονέναι ἀπὸ τοῦ ἀπείρου, πάντων τούτων ἐκ συστροφῶν ἰδίων ἀποκεκριμένων καὶ μειζόνων καὶ ἐλαττόνων·
+    </td>
+    <td>
+        And in addition to what we have already said we must believe that worlds, and indeed every limited compound body which continuously exhibits a similar appearance to the things we see, were created from the infinite, and that all such things, greater and less alike, were separated off from individual agglomerations of matter;
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ πάλιν διαλύεσθαι πάντα, τὰ μὲν θᾶττον, τὰ δὲ βραδύτερον καὶ τὰ μὲν ὑπὸ τῶν τοιῶνδε, τὰ δὲ ὑπὸ τῶν τοιῶνδε πάσχοντα.
+    </td>
+    <td>
+        and that all are again dissolved, some more quickly, some more slowly, some suffering from one set of causes, others from another.
+    </td>
+</tr>
+<tr>
+    <td>
+        [74] ἔτι δὲ καὶ τοὺς κόσμους οὔτε ἐξ ἀνάγκης δεῖ νομίζειν ἕνα σχηματισμὸν ἔχοντας ***** οὐδὲ γὰρ ἂν ἀποδείξειεν οὐδείς, ὡς &lt;ἐν&gt; μὲν τῷ τοιούτῳ καὶ οὐκ ἂν ἐμπεριελήφθη τὰ τοιαῦτα σπέρματα, ἐξ ὧν ζῷά τε καὶ φυτὰ καὶ τὰ λοιπὰ πάντα &lt;τὰ&gt; θεωρούμενα συνίσταται, ἐν δὲ τῷ τοιούτῳ οὐκ ἂν ἐδυνήθη.
+    </td>
+    <td>
+        [74] And further we must believe that these worlds were neither &lt;created&gt; all of necessity with one configuration &lt;nor yet with every kind of shape. Furthermore, we must believe that in all worlds there are living creatures and plants and other things we see in this world;&gt; for indeed no one could prove that in a world of one kind there might or might not have been included the kinds of seeds from which living things and plants and all the rest of the things we see are composed, and that in a world of another kind they could not have been.
+    </td>
+</tr>
+<tr>
+    <td>
+        [75] Ἀλλὰ μὴν ὑποληπτέον καὶ τὴν φύσιν πολλὰ καὶ παντοῖα ὑπὸ αὐτῶν τῶν πραγμάτων διδαχθῆναί τε καὶ ἀναγκασθῆναι·
+    </td>
+    <td>
+        [75] Moreover, we must suppose that human nature too was taught and constrained to do many things of every kind merely by circumstances;
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸν δὲ λογισμὸν τὰ ὑπὸ ταύτης παρεγγυηθέντα ὕστερον ἐξακριβοῦν καὶ προσεξευρίσκειν ἐν μὲν τισὶ θᾶττον, ἐν δὲ τισὶ βραδύτερον καὶ ἐν μὲν τισὶ περιόδοις καὶ χρόνοις <sup>&#8224;</sup>ἀπὸ τῶν ἀπὸ ἀπείρου<sup>&#8224;</sup> * *, ἐν δὲ τισὶ καὶ ἐλάττους.
+    </td>
+    <td>
+        and that later on reasoning elaborated what had been suggested by nature and made further inventions, in some matters quickly, in others slowly, at some epochs and times &lt;making great advances&gt;, and lesser again at others.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὄθεν καὶ τὰ ὀνόματα ἐξ ἀρχῆς μὴ θέσει γενέσθαι, ἀλλ᾽ αὐτὰς τὰς φύσεις τῶν ἀνθρώπων καθ᾽ ἕκαστα ἔθνη ἴδια πασχούσας πάθη καὶ ἴδια λαμβανούσας φαντάσματα ἰδίως τὸν ἀέρα ἐκπέμπειν στελλόμενον ὑφ᾽ ἑκάστων τῶν παθῶν καὶ τῶν φαντασμάτων, ὡς ἄν ποτε καὶ ἡ παρὰ τοὺς τόπους τῶν ἐθνῶν διαφορὰ εἴη· 
+    </td>
+    <td>
+        And so names too were not at first deliberately given to things, but men's natures according to their different nationalities had their own peculiar feelings and received their peculiar impressions, and so each in their own way emitted air formed into shape by each of these feelings and impressions, according to the differences made in the different nations by the places of their abode as well.
+    </td>
+</tr>
+<tr>
+    <td>
+        [76] ὕστερον δὲ κοινῶς καθ᾽ ἕκαστα ἔθνη τὰ ἴδια τεθῆναι πρὸς τὸ τὰς δηλώσεις ἧττον ἀμφιβόλους γενέσθαι ἀλλήλοις καὶ συντομωτέρως δηλουμένας·
+    </td>
+    <td>
+        [76] And then later on by common consent in each nationality special names were deliberately given in order to make their meanings less ambiguous to one another and more briefly demonstrated.
+    </td>
+</tr>
+<tr>
+    <td>
+        τινὰ δὲ καὶ οὐ συνορώμενα πράγματα εἰσφέροντας τοὺς συνειδότας παρεγγυῆσαι τινὰς φθόγγους τοὺς &lt;μέν&gt; ἀναγκασθέντας ἀναφωνῆσαι, τοὺς δὲ τῷ λογισμῷ ἑλομένους κατὰ τὴν πλείστην αἰτίαν οὕτως ἑρμηνεῦσαι.
+    </td>
+    <td>
+        And sometimes those who were acquainted with them brought in things hitherto unknown and introduced sounds for them, on some occasions being naturally constrained to utter them, and on others choosing them by reasoning in accordance with the prevailing mode of formation, and thus making their meaning clear.
+    </td>
+</tr>
+<tr>
+    <td>
+        Καὶ μὴν <καὶ τὴν> ἐν τοῖς μετεώροις φορὰν καὶ τροπὴν καὶ ἔκλειψιν καὶ ἀνατολὴν καὶ δύσιν καὶ τὰ σύστοιχα τούτοις μήτε λειτουργοῦντος τινὸς νομίζειν δεῖ γενέσθαι καὶ διατάττοντος ἢ διατάξοντος καὶ ἅμα τὴν πᾶσαν μακαριότητα ἔχοντος μετὰ ἀφθαρσίας 
+    </td>
+    <td>
+        Furthermore, the motions of the heavenly bodies and their turnings and eclipses and risings and settings, and kindred phenomena to these, must not be thought to be due to any being who controls and ordains or has ordained them and at the same time enjoys perfect bliss together with immortality
+    </td>
+</tr>
+<tr>
+    <td>
+        [77] (οὐ γὰρ συμφωνοῦσιν πραγματεῖαι καὶ φροντίδες καὶ ὀργαὶ καὶ χάριτες μακαριότητι, ἀλλ’ ἐν ἀσθενείᾳ καὶ φόβῳ καὶ προσδεήσει τῶν πλησίον ταῦτα γίνεται),
+    </td>
+    <td>
+        [77] (for trouble and care and anger and kindness are not consistent with a life of blessedness, but these things come to pass where there is weakness and fear and dependence on neighbours). 
+    </td>
+</tr>
+<tr>
+    <td>
+        μήτε αὖ πῦρ ἅμα ὄντα συνεστραμμένου τὴν μακαριότητα κεκτημένα κατὰ βούλησιν τὰς κινήσεις ταύτας λαμβάνειν·
+    </td>
+    <td>
+        Nor again must we believe that they, which are but fire agglomerated in a mass, possess blessedness, and voluntarily take upon themselves these movements.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἀλλὰ πᾶν τὸ σέμνωμα τηρεῖν, κατὰ πάντα ὀνόματα φερόμενα ἐπὶ τὰς τοιαύτας ἐννοίας, ἵνα μηδ᾽ ὑπεναντίαι ἐξ αὐτῶν &lt;γένωνται&gt; τῷ σεμνώματι δόξαι·
+    </td>
+    <td>
+        But we must preserve their full majestic significance in all expressions which we apply to such conceptions, in order that there may not arise out of them opinions contrary to this notion of majesty. 
+    </td>
+</tr>
+<tr>
+    <td>
+        εἰ δὲ μή, τὸν μέγιστον τάραχον ἐν ταῖς ψυχαῖς αὐτὴ ἡ ὑπεναντιότης παρασκευάσει.
+    </td>
+    <td>
+        Otherwise this very contradiction will cause the greatest disturbance in men's souls.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὅθεν δὴ κατὰ τὰς ἐξ ἀρχῆς ἐναπολήψεις τῶν συστροφῶν τούτων ἐν τῇ τοῦ κόσμου γενέσει δεῖ δοξάζειν καὶ τὴν ἀνάγκην ταύτην καὶ περίοδον συντελεῖσθαι.
+    </td>
+    <td>
+        Therefore we must believe that it is due to the original inclusion of matter in such agglomerations during the birth-process of the world that this law of regular succession is also brought about.
     </td>
 </tr>
 </table>
