--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -1320,6 +1320,54 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
         Therefore we must believe that it is due to the original inclusion of matter in such agglomerations during the birth-process of the world that this law of regular succession is also brought about.
     </td>
 </tr>
+<tr>
+    <td>
+        [78] Καὶ μὴν καὶ &lt;τὸ&gt; τὴν ὑπὲρ τῶν κυριωτάτων αἰτίαν ἐξακριβῶσαι φυσιολογίας ἔργον εἶναι δεῖ νομίζειν, καὶ τὸ μακάριον ἐν τῇ περὶ μετεώρων γνώσει ἐνταῦθα πεπτωκέναι καὶ ἐν τῷ τίνες φύσεις αἱ θεωρούμεναι κατὰ τὰ μετέωρα ταυτί, καὶ ὅσα συγγενῆ πρὸς τὴν εἰς τοῦτο ἀκρίβειαν·
+    </td>
+    <td> 
+        [78] Furthermore, we must believe that to discover accurately the cause of the most essential facts is the function of the science of nature, and that blessedness for us in the knowledge of celestial phenomena lies in this and in the understanding of the nature of the existences seen in these celestial phenomena, and of all else that is akin to the exact knowledge requisite for our happiness:
+    </td>
+</tr>
+<tr>
+    <td>
+        ἔτι τε οὐ τὸ πλεοναχῶς ἐν τοῖς τοιούτοις εἶναι καὶ τὸ ἐνδεχόμενον καὶ ἄλλως πως ἔχειν, ἀλλ᾽ ἁπλῶς μὴ εἶναι ἐν ἀφθάρτῳ καὶ μακαρίᾳ φύσει τῶν διάκρισιν ὑποβαλλόντῶν ἢ τάραχον μηθέν·
+    </td>
+    <td> 
+        in knowing too that what occurs in several ways or is capable of being otherwise has no place here, but that nothing which suggests doubt or alarm can be included at all in that which is naturally immortal and blessed.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ τοῦτο καταλαβεῖν τῇ διανοίᾳ ἔστιν ἁπλῶς εἶναι.
+    </td>
+    <td> 
+        Now this we can ascertain by our mind is absolutely the case.
+    </td>
+</tr>
+<tr>
+    <td>
+        [79] τὸ δ᾽ ἐν τῇ ἱστορίᾳ πεπτωκός, τῆς δύσεως καὶ ἀνατολῆς καὶ τροπῆς καὶ ἐκλείψεως καὶ ὅσα συγγενῆ τούτοις μηθὲν ἔτι πρὸς τὸ μακάριον τῆς γνώσεις συντείνειν, ἀλλ᾽ ὁμοίως τοὺς φόβους ἔχειν τοὺς ταῦτα κατιδόντας, τίνες δ᾽ αἱ φύσεις ἀγνοοῦντας καὶ τίνες αἱ κυριώταται αἰτίαι, καὶ εἰ μὴ προσῄδεισαν ταῦτα·
+    </td>
+    <td> 
+        [79] But what falls within the investigation of risings and settings and turnings and eclipses, and all that is akin to this, is no longer of any value for the happiness which knowledge brings, but persons who have perceived all this, but yet do not know what are the natures of these things and what are the essential causes, are still in fear, just as if they did not know these things at all:
+    </td>
+</tr>
+<tr>
+    <td>
+        τάχα δὲ καὶ πλείους, ὅταν τὸ θάμβος ἐκ τῆς τούτων προσκατανοήσεως μὴ δύνηται τὴν λύσιν λαμβάνειν καὶ τὴν περὶ τῶν κυριωτάτων οἰκονομίαν.
+    </td>
+    <td> 
+        indeed, their fear may be even greater, since the wonder which arises out of the observation of these things cannot discover any solution or realize the regulation of the essentials.
+    </td>
+</tr>
+<tr>
+    <td>
+        διὸ δὴ κἂν πλείους αἰτίας εὑρίσκωμεν τροπῶν καὶ δύσεων καὶ ἀνατολῶν καὶ ἐκλείψεων καὶ τῶν τοιουτοτρόπων, ὥσπερ καὶ ἐν τοῖς κατὰ μέρος γινομένοις ἦν,
+    </td>
+    <td> 
+        And for this very reason, even if we discover several causes for turnings and settings and risings and eclipses and the like, as has been the case already in our investigation of detail,
+    </td>
+</tr>
 </table>
 </body>
 </html>
